--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{user.label.editUserInfo}"></h1>
-                <h6 class="title-description" th:text="#{user.msg.descriptionUpdate}"></h6>
+                <h6 class="title-description" th:text="#{user.msg.editSelfDescription}"></h6>
             </div>
         </div>
         <div class="edit">
