--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -11,8 +11,8 @@
     <div class="contents-tree-edit">
         <div class="tree-area">
             <div class="page-title">
-                <h1 th:text="#{menu.config.code}">></h1>
-                <h6 class="title-description" th:text="#{code.msg.description}"></h6>
+                <h1 th:text="#{code.label.code}">></h1>
+                <h6 class="title-description" th:text="#{code.msg.editDescription}"></h6>
             </div>
             <div class="search-area">
                 <div class="search-input">
