#9506 [폼 / 프로세스] 다른이름으로 저장하기 모달 디자인 : px > rem 변경

--- a/src/main/resources/public/src/scss/process/_modal.scss
+++ b/src/main/resources/public/src/scss/process/_modal.scss
@@ -4,7 +4,7 @@
    // 프로세스 다른이름으로 저장하기 모달
    &.save-as {
     .modal-content {
-      padding: 10px 20px; // 10px 20px
+      padding: 0.625rem 1.25rem; // 10px 20px
       @include scrollbarHidden;
 
       .field-label {
