--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3769,7 +3769,7 @@ body.modal-active {
 }
 
 .modal-dialog.save-as .modal-content {
-  padding: 10px 20px;
+  padding: 0.625rem 1.25rem;
   -ms-overflow-style: none;
   /* IE and Edge */
   scrollbar-width: none;
