--- a/src/main/resources/public/src/scss/form/_modal.scss
+++ b/src/main/resources/public/src/scss/form/_modal.scss
@@ -14,7 +14,7 @@
   // 폼 다른이름으로 저장하기 모달
   &.save-as {
     .modal-content {
-      padding: 10px 20px; // 10px 20px
+      padding: 0.625rem 1.25rem; // 10px 20px
       @include scrollbarHidden;
 
       .field-label {
