--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -4,7 +4,7 @@
     xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
     layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{customCode.label.customCode}"></title>
+    <title th:text="${customCode != null} ? #{customCode.label.edit} : #{customCode.label.register}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{customCode.label.customCode}"></h1>
-                <h6 class="title-description" th:text="#{customCode.label.customCode}"></h6>
+                <h6 class="title-description" th:text="#{customCode.msg.editDescription}"></h6>
             </div>
         </div>
         <div class="edit">
