--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -4,15 +4,15 @@
     xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
     layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{menu.workflow.customCode}"></title>
+    <title th:text="#{customCode.label.customCode}"></title>
     <meta charset="UTF-8">
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-list">
         <div class="page-title">
-            <h1 th:text="#{customCode.label.list}"></h1>
-            <h6 class="title-description" th:text="#{customCode.msg.description}"></h6>
+            <h1 th:text="#{customCode.label.customCode}"></h1>
+            <h6 class="title-description" th:text="#{customCode.msg.searchDescription}"></h6>
         </div>
         <div class="search-area">
             <input type="hidden" sec:authorize="hasAuthority('custom.code.update')" th:name="isRole" th:value="true"/>
