--- a/src/main/resources/public/template/document/documentAdminSearch.html
+++ b/src/main/resources/public/template/document/documentAdminSearch.html
@@ -4,14 +4,14 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{document.label.list}"></title>
+    <title th:text="#{document.label.businessFlow}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-list">
         <div class="page-title">
-            <h1 th:text="#{document.label.adminList}"></h1>
-            <h6 class="title-description" th:text="#{document.msg.description}"></h6>
+            <h1 th:text="#{document.label.businessFlow}"></h1>
+            <h6 class="title-description" th:text="#{document.msg.adminSearchDescription}"></h6>
         </div>
         <div class="search-area">
             <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''document.admin.update'')')}"/>
