--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -109,10 +109,11 @@ $tree-modal-width:                            40rem; // 640px
 $tree-modal-height:                           44.19rem; // 707px
 
 /////////////////////////// contents //////////////////////////////
-$token-list-background: $white;
+$token-list-background-color: $white;
 $token-list-topic-color: $dark-gray;
 $token-list-tag-color: rgba(0, 152, 255, 0.1 );
+$token-list-border: 0.0625rem solid $line-gray;
 
-$token-dashbaord-background: $white;
+$token-dashbaord-backgroundcolor: $white;
 $token-dashbaord-header-color: $light-gray;
 $token-dashbaord-border: 0.0625rem solid $line-gray;
