--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -14,7 +14,7 @@
                 <h6 class="title-description" th:text="#{dashboard.label.dashboard}"></h6>
             </div>
         </div>
-        <div class="subtitle">업무통계</div>
+        <div class="sub-title">업무통계</div>
         <div id="statistic" class="dashboard-statistic justify-content-between">
             <div class="statistic-box">
                 <img th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_document.png(theme=${#authentication.details.theme})}">
@@ -54,7 +54,7 @@
             <input type="hidden" id="searchToDt" name="searchToDt" class="search-date" />
             <input type="hidden" id="searchTags" name="searchTags" value="" />
         </form>
-        <div class="subtitle">처리할 문서</div>
+        <div class="sub-title">처리할 문서</div>
         <div class="scroll-wrap list flex-column">
             <div class="list flex-column" id="tokenList"></div>
         </div>
