--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="#{process.label.edit}"></title>
     <meta charset="utf-8">
     <link rel="shortcut icon" th:href="@{/assets/media/images/zenius.ico}" type="image/x-icon">
+    <title th:text="${isView != null} ? #{process.title.preview} : #{process.title.edit}"></title>
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <meta http-equiv="expire" content="-1"/>
