#8924 각 페이지별 제목과 설명을 점검 - 신청서

--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -12,7 +12,7 @@
         <div id="search-main" class="header">
             <div class="page-title">
                 <h1 th:text="#{token.label.list}"></h1>
-                <h6 class="title-description" th:text="#{token.msg.description}"></h6>
+                <h6 class="title-description" th:text="#{token.msg.searchDescription}"></h6>
             </div>
         </div>
         <div id="search-area" class="search-area">
