--- a/src/main/resources/public/template/process/processStatus.html
+++ b/src/main/resources/public/template/process/processStatus.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-    <title th:text="#{process.label.process}"></title>
+    <title th:text="#{process.title.processMap}"></title>
     <script th:src="@{/assets/vendors/d3/d3.min.js}"></script>
 </head>
 <body style="margin: 0;">
