--- a/src/main/resources/public/template/boardAdmin/boardAdminView.html
+++ b/src/main/resources/public/template/boardAdmin/boardAdminView.html
@@ -4,15 +4,15 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{board.label.manager}"></title>
+    <title th:text="#{board.label.boardView}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-edit scroll-wrap">
         <div class="header">
             <div class="page-title">
-                <h1 th:text="#{board.label.manager}"></h1>
-                <h6 class="title-description" th:text="#{board.label.manager}"></h6>
+                <h1 th:text="#{board.label.board}"></h1>
+                <h6 class="title-description" th:text="#{board.msg.adminViewDescription}"></h6>
             </div>
         </div>
         <div class="edit">
