--- a/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
@@ -2,7 +2,7 @@
 
 // thumnbnail > modal(type: icon) 관련 템플릿
 .thumbnail-icon {
-  .thumbnail-container {
+  .thumbnail-main {
     padding: $thumbnail-icon-container-padding;
     height: auto;
     .thumbnail {
