--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
@@ -5,8 +5,9 @@
     .btn-list {
         padding: 2.5rem 0 3.125rem 0; // 40px 0 50px 0
     }
+    // 업무흐름 관리 > 이미지 관리
     .image-list {
-        padding: 3.125rem 3.75rem 2.875rem 3.75rem;
+        padding: 2.5rem 3.125rem 2.5rem 3.125rem; // 40px 50px
     }
     .list {
         width: 61.25rem;
