--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -97,7 +97,7 @@ $color-picker-colorchip-margin:               0.1875rem; // 3px
 $color-picker-colorchip-border:               0.125rem solid $white; // 2px
 
 //////////////////////////// thumbnail //////////////////////////
-$thumbnail-container-padding:                 1.25rem; // 20px
+$thumbnail-main-padding:                      1.25rem; // 20px
 
 //////////////////////////// tooltip ////////////////////////////
 $tooltip-font-size:                           1rem; // 16px
