--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -122,4 +122,4 @@ $color-picker-colorchip-margin:               0.1875rem; // 3px
 $color-picker-colorchip-border:               0.125rem solid $white; // 2px
 
 // thumbnail
-$thumbnail-container-padding:                 1.25rem; // 20px
+$thumbnail-main-padding:                 1.25rem; // 20px
