--- a/src/main/resources/public/src/scss/process/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/process/_thumbnail.scss
@@ -1,11 +1,13 @@
 @import '../template/_thumbnail.scss';
 
-// TODO : 모달 화면 구현 전 임시 scss / 모달 구현 후 제거
-.thumbnail-modal-wrapper {
-  display: block;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog {
-  top: 0 !important;
-  margin: 0 !important;
+// 파일 선택 모달
+.modal-dialog {
+  &.thumbnail-file {
+    width: $thumbnail-modal-width;
+    height: $thumbnail-modal-height;
+    
+    .modal-content {
+      height: calc(#{$thumbnail-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
+    }
+  }
 }
