--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -331,7 +331,7 @@ $tree-selected-bg-color:                     rgba(0, 152, 255, 0.05);
 $tree-hover-bg-color:                        rgba(0, 152, 255, 0.05);
 
 ///////////////////////////////// modal //////////////////////////////
-// TODO: 모달 오픈시 바탕색을 넣을 경우 모달 위에 모달을 띄우거나 모달 위에 알림창이 띄워지면 점점 배경이 어두워지는 현상 > 디자인 확인 후 수정 필요
+// 모달 오픈시 바탕 어둡게
 $modal-backdrop-bg-color:                    rgba(116, 147, 179, 0.5);
 $modal-border-color:                         $line-gray;
 $modal-bg-color:                             $white;
@@ -340,7 +340,7 @@ $modal-border:                               $modal-border-width solid $modal-bo
 $modal-box-shadow:                           0 0 0.3125rem 0 $line-gray; // 흐림 5px, $line-gray
 
 $modal-width:                                34.38rem; // 550px
-$modal-height:                               25.63rem; // 410px
+$modal-height:                               22.5rem; // 360px
 
 // 모달 제목
 $modal-header-height:                        3.375rem; // 54px
@@ -394,22 +394,6 @@ $thumbnail-selected-border-width:            0.125rem; // 2px
 $thumbnail-selected-border-color:            $point-blue;
 $thumbnail-selected-border:                  $thumbnail-selected-border-width solid $thumbnail-selected-border-color;
 $thumbnail-selected-bg-color:                rgba(0, 152, 255, 0.05);
-//$thumbnail-selected-box-shadow:              0 0 0 0.125rem $thumbnail-selected-border-color; // 2px
-
-
-
-$thumbnail-modal-backdrop-color:             rgba(116, 147, 179, 0.5);
-$thumbnail-modal-dialog-width:               62.5rem; // 1000px
-$thumbnail-modal-dialog-height:              48.44rem; // 775px
-$thumbnail-modal-dialog-box-shadow:          0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25); // 5px
-$thumbnail-modal-close-in-color:             #333333;
-$thumbnail-modal-close-out-color:            #CCCCCC;
-
-$thumbnail-btn-default-color:                $white;
-$thumbnail-btn-red-color:                    #e51c23;
-$thumbnail-btn-blue-color:                   #007aff;
-$thumbnail-btn-green-color:                  #00ca3c;
-$thumbnail-btn-gray-color:                   #969696;
 
 /////////////////////////////// tooltip ///////////////////////////////
 $tooltip-help-size:                          1rem; // 16px
